apps/home/frigate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: home-arpa-tls
  rules:
    - host: "frigate.home.arpa"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frigate-service
                port:
                  number: 8971
